<resources>
    <string name="app_name">PhoneBookApp</string>
    <string name="add_button">ADD</string>
    <string name="find_button">FIND</string>
    <string name="clear_button">CLEAR</string>
    <string name="debug_button">DEBUG</string>
    <string name="back_button">BACK</string>
    <string name="showAll_button">ALL</string>
    <string name="hint_findContact_field"><i>Поиск по имени</i></string>
    <string name="hint_newContactName_field"><i>Имя нового контакта</i></string>
    <string name="hint_newContactNumber_field"><i>Номер нового контакта</i></string>
    <string name="counter_messages">Всего контактов: %1$s</string>
</resources>